maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:3: error: not found: type direction
  var dir:direction=NORTH
          ^IslandMaze:3: error: not found: value NORTH
  var dir:direction=NORTH
                    ^