maze.island.IslandMaze.scala.code
override def run() {
  var dir:direction=NORTH
  while (getY()!=0) {
  	while(porteBiscuit()==false) {
      if (getDirection()==Direction.NORTH&&estFaceMur()==false) {
        avance()
      }
      else {
    	keepHandOnSideWall()
      }
    	if (estSurBiscuit()==true) {
      	prendBiscuit()
    	}
      dir=getDirection()
      setDirection(Direction.NORTH:Direction)
      if (estFaceMur()==false) {
        avance()
      }
      setDirection(dir:Direction)
  	}
  }
  while(porteBiscuit()==false) {
    	keepHandOnSideWall()
    if (estSurBiscuit()==true) {
      	prendBiscuit()
      }
  } 	
}


def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()==true) {
    droite()
    if (estFaceMur()==false) {
    avance()
    }
    else {
      droite()
    }
  }
  else {
    avance()
  }  
}